tests/baselines/reference/duplicateConstructSignature2.errors.txt
==== tests/cases/compiler/duplicateConstructSignature2.ts (1 errors) ====
    interface I<T> {
        (x: T): number;
        (x: T): string;
        ~~~~~~~~~~~~~~
!!! duplicateConstructSignature2.ts(3,5): error TS2175: Overloads cannot differ only by return type.
    }